[gd_scene load_steps=2 format=3 uid="uid://b4mysbhjv2bij"]

[ext_resource type="Script" uid="uid://bomiuo233vqov" path="res://conveyor/conveyor.gd" id="1_d0x4l"]

[node name="Conveyor" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
color = Color(0.21568628, 0.24313726, 0.2509804, 1)
script = ExtResource("1_d0x4l")

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_right = 1.0
offset_bottom = 23.0

[node name="ConveyorComponents" type="VFlowContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
last_wrap_alignment = 3
reverse_fill = true
metadata/_edit_use_anchors_ = true

[node name="ComponentTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0

[connection signal="timeout" from="ComponentTimer" to="." method="_on_spawn_component_timeout"]
